# vehicle_platform

./: .gitlab-ci.yml  CMakeLists.txt  package.xml
config/: analyzers.yaml  camera_calibration.rviz  diagnostics_parser.yaml  gps_diagnostics_parser.yaml  lexus_model.urdf  platform.urdf  platform_sensors.rviz
config/analyzers/: cameras.yaml  gps.yaml  lidar_center.yaml  lidar_front.yaml  tfl_detection.yaml
config/calib/: camera_fl.yaml  camera_fr.yaml
config/ssc/: speed_model.json
desktop_icons/: Dataspeed_Joystick_Demo.desktop  pacmod_game_control.desktop  sensor_visualization.desktop  ssc_joystick.desktop
launch/: avt_vimba_camera.launch  camera_calibration.launch  diagnostics.launch  evaluate_intrinsics_using_bag.launch  novatel_gps_driver.launch  nvidia_cameras.launch  nvidia_cameras_decoder.launch  ouster_lidar_driver.launch  pacmod_game_control.launch  platform.launch  teleoperation.launch  teleoperation_getugo.launch  visualization.launch
launch/drivers/: nvidia_cameras_driver.launch  ouster_lidar_driver.launch  pacmod_game_control_nojoy.launch
launch/sensors/: camera_fl.launch  camera_fr.launch  dbw.launch  gnss.launch  lexus_model.launch  lidar_center.launch  lidar_front.launch  nvidia_cameras.launch  radar_fc.launch  ssc.launch  tf.launch
msg/: EsrTrackArray.msg  EsrTrackMotionPowerArray.msg  EsrTrackMotionPowerId.msg
nodes/camera_info_publisher/: custom_camera_info_publisher.py
nodes/diagnostics_parser/: diagnostics_parser.py
nodes/gps_diagnostics_parser/: gps_diagnostics_parser.py
nodes/heartbeat_notif/: heartbeat_notif.py
nodes/novatel_oem7_driver_diag/: novatel_oem7_driver_diag.py
nodes/radar_topic_merger/: radar_topic_merger.cpp  radar_topic_merger.h
rviz/: camera_calibration.rviz  multi_lidar_calibration.rviz  platform_sensors.rviz
