<package format="2">
  <name>vehicle_platform</name>
  <version>1.0.0</version>
  <description>The vehicle_platform package</description>
  <license>Closed-Source</license>
  <author email="tambet.matiisen@ut.ee">Tambet Matiisen</author>
  <maintainer email="adl@ut.ee">Autonomous Driving Lab</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>avt_vimba_camera</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>ouster_ros</exec_depend>
  <exec_depend>novatel_oem7_driver</exec_depend>
  <exec_depend>delphi_esr</exec_depend>
  <exec_depend>kvaser_interface</exec_depend>
  <exec_depend>pacmod3</exec_depend>
  <exec_depend>pacmod_game_control</exec_depend>
  <exec_depend>ssc_pm_lexus</exec_depend>

</package>
